auto-test/tests/chapter_18/invalid_types/extra_credit/incomplete_unions/define_incomplete_union.c
union u; 

union u my_union; 